# socket-comm

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
cmake/: aarch64-toolchain.cmake
src/: client.cpp  common.h  git_version.h.in  server.cpp
